--- a/Proceso ETL BD Oportunidades.ipynb
+++ b/Proceso ETL BD Oportunidades.ipynb
@@ -31,14 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "0279e193",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -2365,7 +2363,7 @@
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.head(50)"
    ]
   },
   {
@@ -2374,7 +2372,7 @@
    "metadata": {},
    "source": [
     "## 3.- Carga de dataset Transromado y normalizado.\n",
-    "* cCargar DataFrame en una base de datos en SQL Server Management Studio (SSMS) desde Python utilizando la biblioteca pyodbc o sqlalchemy."
+    "* Cargar DataFrame en una base de datos en SQL Server Management Studio (SSMS) desde Python utilizando la biblioteca pyodbc o sqlalchemy."
    ]
   },
   {
